create github pages

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><section once="footers" class="cid-rNWbLlTNJi" id="footer6-3">
+<section class="engine"><a href="https://mobirise.info/k">develop your own website</a></section><section once="footers" class="cid-rNWbLlTNJi" id="footer6-3">
 
     
 
@@ -88,7 +88,7 @@
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-2">Сообщество для студентов</h1>
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">В этом сайте вы можете сделать любые возможности связанные по все направлением учебы&nbsp;</p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="https://mobirise.co">Заказы</a>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="https://studwork1.github.io/aa2/page1.html">Заказы</a>
                     <a class="btn btn-md btn-white-outline display-4" href="https://mobirise.co">Спрашивать</a></div>
             </div>
         </div>
